ZCS-14466: fixed labels in 2FA login page

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -2086,8 +2086,10 @@ enterUsername = Introdu\u00efu el nom d\u2019usuari i la contrasenya d\u2019admi
 enterNewPassword = Introdu\u00efu una contrasenya nova i torneu a introduir-la al camp de confirmaci\u00f3.
 twoFactorCodeTitle = Utilitzant l\u2019autenticaci\u00f3 de dos factors
 twoFactorCodeLabel = Codi
+twoFactorCodeLabel_app = Codi de l\u2019aplicaci\u00f3 d\u2019autenticaci\u00f3
+twoFactorCodeLabel_email = Codi del correu electr\u00f2nic
 twoFactorCodeButton = Verifiqueu
-twoFactorAuthResendEmail = Torna a enviar un codi per correu electr\u00f2nic
+twoFactorAuthResendEmail = Codi de reenviament
 twoFactorAuthResendEmailDone = Codi resentit.
 twoFactorAuthChooseMethod_app = Far\u00e9 servir l\u2019aplicaci\u00f3 d\u2019autenticaci\u00f3 al meu tel\u00e8fon
 twoFactorAuthChooseMethod_email = Envieu el codi segur a
