--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -2027,8 +2027,10 @@ enterUsername = Indtast administratorbrugernavn og -adgangskode
 enterNewPassword = Indtast en ny adgangskode og indtast den igen i bekr\u00e6ftelsesfeltet.
 twoFactorCodeTitle = Brug af tofaktorautentificering
 twoFactorCodeLabel = Kode
+twoFactorCodeLabel_app = Kode fra Authenticator-appen
+twoFactorCodeLabel_email = Kode fra e-mail
 twoFactorCodeButton = Verificere
-twoFactorAuthResendEmail = Send en kode igen via e-mail
+twoFactorAuthResendEmail = Gensend kode
 twoFactorAuthResendEmailDone = Koden sendes igen.
 twoFactorAuthChooseMethod_app = Jeg vil bruge godkendelsesappen p\u00e5 min telefon
 twoFactorAuthChooseMethod_email = Send sikker kode til
