--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -2057,8 +2057,10 @@ enterUsername = Bitte geben Sie Ihren Administrator-Nutzernamen und Ihr Passwort
 enterNewPassword = Bitte geben Sie ein neues Passwort ein und wiederholen Sie es im Best\u00e4tigungsfeld.
 twoFactorCodeTitle = Verwendung der Zwei-Faktor-Authentifizierung
 twoFactorCodeLabel = Code
+twoFactorCodeLabel_app = Code aus der Authentifizierungs-App
+twoFactorCodeLabel_email = Code aus E-Mail
 twoFactorCodeButton = \u00dcberpr\u00fcfen
-twoFactorAuthResendEmail = Senden Sie einen Code erneut per E-Mail
+twoFactorAuthResendEmail = Code erneut senden
 twoFactorAuthResendEmailDone = Code erneut gesendet.
 twoFactorAuthChooseMethod_app = Ich werde die Authentifizierungs-App auf meinem Telefon verwenden
 twoFactorAuthChooseMethod_email = Senden Sie einen sicheren Code an
