--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -2081,8 +2081,10 @@ enterUsername = Idatzi erabiltzaile-izena eta administratzaile-pasahitza.
 enterNewPassword = Idatzi beste pasahitz bat, eta sartu berriz berrespen-eremuan.
 twoFactorCodeTitle = Bi faktore autentifikazio erabiliz
 twoFactorCodeLabel = Kodea
+twoFactorCodeLabel_app = Kodea autentifikatzaile aplikaziotik
+twoFactorCodeLabel_email = Posta elektronikoko kodea
 twoFactorCodeButton = Egiaztatu
-twoFactorAuthResendEmail = Bidali berriro kode bat posta elektronikoz
+twoFactorAuthResendEmail = Birbidali kodea
 twoFactorAuthResendEmailDone = Kodea bidaltzen da.
 twoFactorAuthChooseMethod_app = Nire telefonoan autentifikazio aplikazioa erabiliko dut
 twoFactorAuthChooseMethod_email = Bidali kode segurua helbide honetara
