--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -2086,8 +2086,10 @@ enterUsername = Saisissez le nom de l\u2019administrateur et son mot de passe
 enterNewPassword = Saisissez un nouveau mot de passe et ressaisissez-le dans le champ de confirmation.
 twoFactorCodeTitle = Utilisation de l\u0027authentification \u00e0 deux facteurs
 twoFactorCodeLabel = Code
+twoFactorCodeLabel_app = Code de l\u2019application d\u2019authentification
+twoFactorCodeLabel_email = Code provenant d\u2019un e-mail
 twoFactorCodeButton = V\u00e9rifier
-twoFactorAuthResendEmail = Renvoyer un code par email
+twoFactorAuthResendEmail = Renvoyer le code
 twoFactorAuthResendEmailDone = Code renvoy\u00e9.
 twoFactorAuthChooseMethod_app = J\u2019utiliserai l\u2019application d\u2019authentification sur mon t\u00e9l\u00e9phone
 twoFactorAuthChooseMethod_email = Envoyez le code s\u00e9curis\u00e9 \u00e0
