--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -2086,8 +2086,10 @@ enterUsername = Adja meg a rendszergazdai felhaszn\u00e1l\u00f3nevet \u00e9s jel
 enterNewPassword = Adjon meg egy \u00faj jelsz\u00f3t, \u00e9s a meger\u0151s\u00edt\u00e9si mez\u0151be \u00edrja be \u00fajra.
 twoFactorCodeTitle = K\u00e9tfaktoros hiteles\u00edt\u00e9s haszn\u00e1lata
 twoFactorCodeLabel = K\u00f3d
+twoFactorCodeLabel_app = K\u00f3d a hiteles\u00edt\u0151 alkalmaz\u00e1sb\u00f3l
+twoFactorCodeLabel_email = K\u00f3d e-mailb\u0151l
 twoFactorCodeButton = Ellen\u0151rizze
-twoFactorAuthResendEmail = K\u00f3d \u00fajrak\u00fcld\u00e9se e-mailben
+twoFactorAuthResendEmail = K\u00f3d \u00fajrak\u00fcld\u00e9se
 twoFactorAuthResendEmailDone = A k\u00f3d \u00fajrak\u00fcldve.
 twoFactorAuthChooseMethod_app = Hiteles\u00edt\u00e9si alkalmaz\u00e1st fogok haszn\u00e1lni a telefonomon
 twoFactorAuthChooseMethod_email = Biztons\u00e1gi k\u00f3d k\u00fcld\u00e9se a c\u00edmre
