--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -2089,8 +2089,10 @@ enterUsername = Masukkan nama pengguna administrator dan kata sandi.
 enterNewPassword = Masukkan kata sandi baru dan masukkan lagi kata sandi ini di bidang konfirmasi.
 twoFactorCodeTitle = Menggunakan otentikasi dua faktor
 twoFactorCodeLabel = Kode
+twoFactorCodeLabel_app = Kode dari aplikasi pengautentikasi
+twoFactorCodeLabel_email = Kode dari email
 twoFactorCodeButton = Memeriksa
-twoFactorAuthResendEmail = Kirim ulang kode melalui email
+twoFactorAuthResendEmail = Kirim ulang Kode
 twoFactorAuthResendEmailDone = Kode dikirim ulang.
 twoFactorAuthChooseMethod_app = Saya akan menggunakan aplikasi otentikasi di ponsel saya
 twoFactorAuthChooseMethod_email = Kirim kode aman ke
