--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -2027,8 +2027,10 @@ enterUsername = Inserisci di nuovo nome utente e password amministratore
 enterNewPassword = Inserisci la nuova password e ripeterla nel campo di conferma.
 twoFactorCodeTitle = Utilizzo dell\u0027autenticazione a due fattori
 twoFactorCodeLabel = Codice
+twoFactorCodeLabel_app = Codice dall\u2019app di autenticazione
+twoFactorCodeLabel_email = Codice dall\u2019e-mail
 twoFactorCodeButton = Verificare  
-twoFactorAuthResendEmail = Invia nuovamente un codice tramite e-mail
+twoFactorAuthResendEmail = Codice di rispedizione
 twoFactorAuthResendEmailDone = Codice inviato nuovamente.
 twoFactorAuthChooseMethod_app = Utilizzer\u00f2 l\u2019app di autenticazione sul mio telefono
 twoFactorAuthChooseMethod_email = Invia il codice sicuro a
