--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -2086,8 +2086,10 @@ enterUsername = \u05d4\u05d6\u05df \u05d0\u05ea \u05e9\u05dd \u05d4\u05de\u05e9\
 enterNewPassword = \u05d4\u05d6\u05df \u05e1\u05d9\u05e1\u05de\u05d4 \u05d7\u05d3\u05e9\u05d4 \u05d5\u05d4\u05d6\u05df \u05d0\u05d5\u05ea\u05d4 \u05e9\u05d5\u05d1 \u05d1\u05e9\u05d3\u05d4 \u05d4\u05d0\u05d9\u05e9\u05d5\u05e8.
 twoFactorCodeTitle = \u05e9\u05d9\u05de\u05d5\u05e9 \u05d1\u05d0\u05d9\u05de\u05d5\u05ea \u05e9\u05e0\u05d9 \u05d2\u05d5\u05e8\u05de\u05d9\u05dd
 twoFactorCodeLabel = \u05e7\u05d5\u05d3
+twoFactorCodeLabel_app = \u05e7\u05d5\u05d3 \u05de\u05d0\u05e4\u05dc\u05d9\u05e7\u05e6\u05d9\u05d9\u05ea \u05d4\u05de\u05d0\u05de\u05ea
+twoFactorCodeLabel_email = \u05e7\u05d5\u05d3 \u05de\u05d4\u05de\u05d9\u05d9\u05dc
 twoFactorCodeButton = \u05ea\u05d0\u05e9\u05e8
-twoFactorAuthResendEmail = \u05e9\u05dc\u05d7 \u05e9\u05d5\u05d1 \u05e7\u05d5\u05d3 \u05d1\u05d0\u05d9\u05de\u05d9\u05d9\u05dc
+twoFactorAuthResendEmail = \u05e9\u05dc\u05d7 \u05e7\u05d5\u05d3 \u05e9\u05d5\u05d1
 twoFactorAuthResendEmailDone = \u05d4\u05e7\u05d5\u05d3 \u05e0\u05e9\u05dc\u05d7 \u05e9\u05d5\u05d1 \u05d5\u05e9\u05d5\u05d1.
 twoFactorAuthChooseMethod_app = \u05d0\u05e0\u05d9 \u05d0\u05e9\u05ea\u05de\u05e9 \u05d1\u05d0\u05e4\u05dc\u05d9\u05e7\u05e6\u05d9\u05d9\u05ea \u05d0\u05d9\u05de\u05d5\u05ea \u05d1\u05d8\u05dc\u05e4\u05d5\u05df \u05e9\u05dc\u05d9
 twoFactorAuthChooseMethod_email = \u05e9\u05dc\u05d7 \u05e7\u05d5\u05d3 \u05de\u05d0\u05d5\u05d1\u05d8\u05d7 \u05d0\u05dc
