--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -2086,8 +2086,10 @@ enterUsername = Sila masukkan nama pengguna dan kata laluan pentadbir
 enterNewPassword = Sila masukkan kata laluan baharu dan masukkannya semula dalam medan pengesahan.
 twoFactorCodeTitle = Menggunakan pengesahan dua faktor
 twoFactorCodeLabel = Kod
+twoFactorCodeLabel_app = Kod daripada apl pengesah
+twoFactorCodeLabel_email = Kod daripada e-mel
 twoFactorCodeButton = Sahkan
-twoFactorAuthResendEmail = Hantar semula kod melalui e-mel
+twoFactorAuthResendEmail = Sambung semula Kod
 twoFactorAuthResendEmailDone = Kod dihantar semula.
 twoFactorAuthChooseMethod_app = Saya akan menggunakan aplikasi pengesahan pada telefon saya
 twoFactorAuthChooseMethod_email = Hantar kod selamat ke
