--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -2027,8 +2027,10 @@ enterUsername = Voer gebruikersnaam en wachtwoord van de beheerder in
 enterNewPassword = Voer een nieuw wachtwoord in en typ het ook in het veld Bevestigen.
 twoFactorCodeTitle = Twee-factor-authenticatie gebruiken
 twoFactorCodeLabel = Code
+twoFactorCodeLabel_app = Code van authenticator-app
+twoFactorCodeLabel_email = Code uit e-mail
 twoFactorCodeButton = Verifi\u00ebren
-twoFactorAuthResendEmail = Verstuur een code opnieuw per e-mail
+twoFactorAuthResendEmail = Code nogmaals versturen
 twoFactorAuthResendEmailDone = Code kwalijk.
 twoFactorAuthChooseMethod_app = Ik gebruik de authenticatie-app op mijn telefoon
 twoFactorAuthChooseMethod_email = Stuur beveiligde code naar
