--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -2090,8 +2090,10 @@ enterUsername = Angi administrators brukernavn og passord
 enterNewPassword = Angi et nytt passord, og repeter det i bekreftelsesfeltet.
 twoFactorCodeTitle = Bruker tofaktorautentisering
 twoFactorCodeLabel = Kode
+twoFactorCodeLabel_app = Kode fra autentiseringsappen
+twoFactorCodeLabel_email = Kode fra e-post
 twoFactorCodeButton = Bekrefte
-twoFactorAuthResendEmail = Send en kode p\u00e5 nytt via e-post
+twoFactorAuthResendEmail = Send kode p\u00e5 nytt
 twoFactorAuthResendEmailDone = Koden sendes p\u00e5 nytt.
 twoFactorAuthChooseMethod_app = Jeg vil bruke autentiseringsappen p\u00e5 telefonen min
 twoFactorAuthChooseMethod_email = Send sikker kode til
