--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -2077,8 +2077,10 @@ enterUsername = Wprowad\u017a nazw\u0119 u\u017cytkownika i has\u0142o administr
 enterNewPassword = Wprowad\u017a nowe has\u0142o i wprowad\u017a je ponownie w polu potwierdzenia.
 twoFactorCodeTitle = Korzystanie z uwierzytelniania dwuskładnikowego
 twoFactorCodeLabel = Kod
+twoFactorCodeLabel_app = Kod z aplikacji uwierzytelniaj\u0105cej
+twoFactorCodeLabel_email = Kod z e-maila
 twoFactorCodeButton = Zweryfikowa\u0107
-twoFactorAuthResendEmail = Wy\u015blij ponownie kod e-mailem
+twoFactorAuthResendEmail = Wy\u015blij ponownie kod
 twoFactorAuthResendEmailDone = Kod przes\u0142any ponownie.
 twoFactorAuthChooseMethod_app = B\u0119d\u0119 korzysta\u0107 z aplikacji uwierzytelniaj\u0105cej na moim telefonie
 twoFactorAuthChooseMethod_email = Wy\u015blij bezpieczny kod do
