--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -2086,8 +2086,10 @@ enterUsername = Introduce\u0163i numele de utilizator \u015fi parola administrat
 enterNewPassword = Introduce\u0163i o parol\u0103 nou\u0103 aici \u015fi \u00een c\u00e2mpul de confirmare.
 twoFactorCodeTitle = Folosind autentificarea cu doi factori
 twoFactorCodeLabel = Cod
+twoFactorCodeLabel_app = Cod din aplica\u021bia de autentificare
+twoFactorCodeLabel_email = Cod din e-mail
 twoFactorCodeButton = Verifica
-twoFactorAuthResendEmail = Retrimite\u021bi un cod prin e-mail
+twoFactorAuthResendEmail = Retrimite codul
 twoFactorAuthResendEmailDone = Cod resim\u021bit.
 twoFactorAuthChooseMethod_app = Voi folosi aplica\u021bia de autentificare pe telefonul meu
 twoFactorAuthChooseMethod_email = Trimite codul securizat c\u0103tre
