--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -2086,8 +2086,10 @@ enterUsername = Vnesite skrbni\u0161ko uporabni\u0161ko ime in geslo
 enterNewPassword = Vnesite novo geslo in ga ponovite v polju za potrditev.
 twoFactorCodeTitle = Uporaba dvofaktorske avtentikacije
 twoFactorCodeLabel = Koda
+twoFactorCodeLabel_app = Koda iz aplikacije za preverjanje pristnosti
+twoFactorCodeLabel_email = Koda iz elektronske po\u0161te
 twoFactorCodeButton = Preverite
-twoFactorAuthResendEmail = Ponovno po\u0161ljite kodo po e-po\u0161ti
+twoFactorAuthResendEmail = Ponovno po\u0161lji kodo
 twoFactorAuthResendEmailDone = Koda ponovno poslana.
 twoFactorAuthChooseMethod_app = V telefonu bom uporabil aplikacijo za preverjanje pristnosti
 twoFactorAuthChooseMethod_email = Po\u0161lji varno kodo na
