--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -2084,8 +2084,10 @@ enterUsername = L\u00fctfen y\u00f6netici kullan\u0131c\u0131 ad\u0131n\u0131 ve
 enterNewPassword = L\u00fctfen yeni bir parola girin ve onay alan\u0131na yeniden girin.
 twoFactorCodeTitle = \u0130ki fakt\u00f6rl\u00fc kimlik do\u011frulama kullanma
 twoFactorCodeLabel = Kodu
+twoFactorCodeLabel_app = Kimlik do\u011frulay\u0131c\u0131 uygulamas\u0131ndan gelen kod
+twoFactorCodeLabel_email = E-postadaki kod
 twoFactorCodeButton = Do\u011frulayın
-twoFactorAuthResendEmail = Kodu e-postayla yeniden g\u00f6nderme
+twoFactorAuthResendEmail = Yeniden g\u00f6nderme kodu
 twoFactorAuthResendEmailDone = Kod Yeniden G\u00f6nderildi.
 twoFactorAuthChooseMethod_app = Telefonumda kimlik do\u011frulama uygulamas\u0131n\u0131 kullanaca\u011f\u0131m
 twoFactorAuthChooseMethod_email = G\u00fcvenli kodu \u015furaya g\u00f6nder:
