--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -2090,8 +2090,10 @@ enterUsername = Vui l\u00f2ng nh\u1eadp t\u00ean ng\u01b0\u1eddi d\u00f9ng v\u00
 enterNewPassword = Vui l\u00f2ng nh\u1eadp m\u1ed9t m\u1eadt kh\u1ea9u m\u1edbi v\u00e0 nh\u1eadp l\u1ea1i n\u00f3 trong tr\u01b0\u1eddng x\u00e1c nh\u1eadn.
 twoFactorCodeTitle = S\u1eed d\u1ee5ng x\u00e1c th\u1ef1c hai y\u1ebfu t\u1ed1
 twoFactorCodeLabel = M\u00e3
+twoFactorCodeLabel_app = M\u00e3 t\u1eeb \u1ee9ng d\u1ee5ng x\u00e1c th\u1ef1c
+twoFactorCodeLabel_email = M\u00e3 t\u1eeb email
 twoFactorCodeButton = Ki\u1ec3m ch\u1ee9ng
-twoFactorAuthResendEmail = G\u1eedi l\u1ea1i m\u00e3 qua email
+twoFactorAuthResendEmail = M\u00e3 g\u1eedi l\u1ea1i
 twoFactorAuthResendEmailDone = M\u00e3 g\u1eedi l\u1ea1i.
 twoFactorAuthChooseMethod_app = T\u00f4i s\u1ebd s\u1eed d\u1ee5ng \u1ee9ng d\u1ee5ng x\u00e1c th\u1ef1c tr\u00ean \u0111i\u1ec7n tho\u1ea1i c\u1ee7a m\u00ecnh
 twoFactorAuthChooseMethod_email = G\u1eedi m\u00e3 b\u1ea3o m\u1eadt t\u1edbi
