--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -2066,8 +2066,10 @@ enterUsername = Por favor introduce tu nombre de usuario y contrase\u00f1a de ad
 enterNewPassword = Introduce una nueva contrase\u00f1a y vuelve a introducirla en el campo de confirmaci\u00f3n.
 twoFactorCodeTitle = Usar autenticaci\u00f3n de dos factores
 twoFactorCodeLabel = C\u00f3digo
+twoFactorCodeLabel_app = C\u00f3digo de la aplicaci\u00f3n de autenticaci\u00f3n
+twoFactorCodeLabel_email = C\u00f3digo del correo electr\u00f3nico
 twoFactorCodeButton = Verificar
-twoFactorAuthResendEmail = Reenviar un c\u00f3digo por correo electr\u00f3nico
+twoFactorAuthResendEmail = Reenviar codigo
 twoFactorAuthResendEmailDone = C\u00f3digo reenviado.
 twoFactorAuthChooseMethod_app = Usar\u00e9 la aplicaci\u00f3n de autenticaci\u00f3n en mi tel\u00e9fono
 twoFactorAuthChooseMethod_email = Enviar c\u00f3digo seguro a
