--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -2098,8 +2098,10 @@ enterUsername = Please enter administrator username and password
 enterNewPassword = Please enter a new password and re-enter it in the confirmation field.
 twoFactorCodeTitle = Using two factor authentication
 twoFactorCodeLabel = Code
+twoFactorCodeLabel_app = Code from authenticator app
+twoFactorCodeLabel_email = Code from email
 twoFactorCodeButton = Verify
-twoFactorAuthResendEmail = Resend a code by email
+twoFactorAuthResendEmail = Resend code
 twoFactorAuthResendEmailDone = Code resent.
 twoFactorAuthChooseMethod_app = I will use authentication app on my phone
 twoFactorAuthChooseMethod_email = Send secure code to
