--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -2035,8 +2035,10 @@ enterUsername = \uad00\ub9ac\uc790 \uc0ac\uc6a9\uc790 \uc774\ub984\uacfc \ube44\
 enterNewPassword = \uc0c8 \ube44\ubc00\ubc88\ud638\ub97c \uc785\ub825\ud558\uace0 \ud655\uc778 \ud544\ub4dc\uc5d0 \ub2e4\uc2dc \uc785\ub825\ud558\uc138\uc694.
 twoFactorCodeTitle = \u0032 \ub2e8\uacc4 \uc778\uc99d \uc0ac\uc6a9
 twoFactorCodeLabel = \uc554\ud638
+twoFactorCodeLabel_app = \uc778\uc99d\uc790 \uc571\uc758 \ucf54\ub4dc
+twoFactorCodeLabel_email = \uc774\uba54\uc77c\uc758 \ucf54\ub4dc
 twoFactorCodeButton = \ud655\uc778
-twoFactorAuthResendEmail = \uc774\uba54\uc77c\ub85c \ucf54\ub4dc \uc7ac\uc804\uc1a1
+twoFactorAuthResendEmail = \ucf54\ub4dc \uc7ac\uc804\uc1a1
 twoFactorAuthResendEmailDone = \ucf54\ub4dc\uac00 \ub2e4\uc2dc \uc804\uc1a1\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
 twoFactorAuthChooseMethod_app = \ud734\ub300\ud3f0\uc5d0\uc11c \uc778\uc99d \uc571\uc744 \uc0ac\uc6a9\ud558\uaca0\uc2b5\ub2c8\ub2e4.
 twoFactorAuthChooseMethod_email = \ub2e4\uc74c\uc73c\ub85c \ubcf4\uc548 \ucf54\ub4dc \ubcf4\ub0b4\uae30
