--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -2090,8 +2090,10 @@ enterUsername = Introduza o nome de utilizador e a palavra-passe do administrado
 enterNewPassword = Introduza uma nova palavra-passe e reintroduza-a no campo de confirma\u00e7\u00e3o.
 twoFactorCodeTitle = Usando autentica\u00e7\u00e3o de dois fatores
 twoFactorCodeLabel = C\u00f3digo
+twoFactorCodeLabel_app = C\u00f3digo do aplicativo autenticador
+twoFactorCodeLabel_email = C\u00f3digo do e-mail
 twoFactorCodeButton = Verificar
-twoFactorAuthResendEmail = Reenviar um c\u00f3digo por e-mail
+twoFactorAuthResendEmail = Reenviar c\u00f3digo
 twoFactorAuthResendEmailDone = C\u00f3digo reenviado.
 twoFactorAuthChooseMethod_app = Vou usar o aplicativo de autentica\u00e7\u00e3o no meu telefone
 twoFactorAuthChooseMethod_email = Envie c\u00f3digo seguro para
