--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -2027,8 +2027,10 @@ enterUsername = Ange administrat\u00f6rens anv\u00e4ndarnamn och l\u00f6senord
 enterNewPassword = Ange ett nytt l\u00f6senord och skriv in det igen i f\u00e4ltet f\u00f6r bekr\u00e4ftelse.
 twoFactorCodeTitle = Anv\u00e4nda tv\u00e5faktorautentisering
 twoFactorCodeLabel = Koda
+twoFactorCodeLabel_app = Kod fr\u00e5n autentiseringsappen
+twoFactorCodeLabel_email = Kod fr\u00e5n e-post
 twoFactorCodeButton = Kontrollera
-twoFactorAuthResendEmail = Skicka en kod igen via e-post
+twoFactorAuthResendEmail = \u00c5ters\u00e4nd koden
 twoFactorAuthResendEmailDone = Koden skickas p\u00e5 nytt.
 twoFactorAuthChooseMethod_app = Jag kommer att anv\u00e4nda autentiseringsappen p\u00e5 min telefon
 twoFactorAuthChooseMethod_email = Skicka s\u00e4kerhetskod till
