--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -2076,8 +2076,10 @@ enterUsername = \u8bf7\u8f93\u5165\u7ba1\u7406\u5458\u7528\u6237\u540d\u548c\u5b
 enterNewPassword = \u8bf7\u8f93\u5165\u65b0\u5bc6\u7801\u5e76\u5728\u786e\u8ba4\u5b57\u6bb5\u4e2d\u518d\u6b21\u8f93\u5165\u3002
 twoFactorCodeTitle = \u4f7f\u7528\u4e24\u56e0\u7d20\u9a8c\u8bc1
 twoFactorCodeLabel = \u7801
+twoFactorCodeLabel_app = \u6765\u81ea\u8eab\u4efd\u9a8c\u8bc1\u5668\u5e94\u7528\u7a0b\u5e8f\u7684\u4ee3\u7801
+twoFactorCodeLabel_email = \u6765\u81ea\u7535\u5b50\u90ae\u4ef6\u7684\u4ee3\u7801
 twoFactorCodeButton = \u6821\u9a8c
-twoFactorAuthResendEmail = \u901a\u8fc7\u7535\u5b50\u90ae\u4ef6\u91cd\u65b0\u53d1\u9001\u4ee3\u7801
+twoFactorAuthResendEmail = \u91cd\u65b0\u53d1\u9001\u9a8c\u8bc1\u7801
 twoFactorAuthResendEmailDone = \u4ee3\u7801\u5df2\u91cd\u65b0\u53d1\u9001\u3002
 twoFactorAuthChooseMethod_app = \u6211\u5c06\u4f7f\u7528\u624b\u673a\u4e0a\u7684\u8eab\u4efd\u9a8c\u8bc1\u5e94\u7528\u7a0b\u5e8f
 twoFactorAuthChooseMethod_email = \u5c06\u5b89\u5168\u4ee3\u7801\u53d1\u9001\u81f3
