--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -2036,8 +2036,10 @@ enterUsername = \u8acb\u8f38\u5165\u7cfb\u7d71\u7ba1\u7406\u54e1\u7684\u7528\u62
 enterNewPassword = \u8acb\u8f38\u5165\u65b0\u5bc6\u78bc\uff0c\u4e26\u5728\u78ba\u8a8d\u6b04\u4e2d\u518d\u8f38\u5165\u4e00\u6b21\u3002
 twoFactorCodeTitle = \u4f7f\u7528\u4e24\u56e0\u7d20\u9a8c\u8bc1
 twoFactorCodeLabel = \u7801
+twoFactorCodeLabel_app = \u4f86\u81ea\u9a57\u8b49\u5668\u61c9\u7528\u7a0b\u5f0f\u7684\u7a0b\u5f0f\u78bc
+twoFactorCodeLabel_email = \u96fb\u5b50\u90f5\u4ef6\u4e2d\u7684\u7a0b\u5f0f\u78bc
 twoFactorCodeButton = \u6821\u9a8c
-twoFactorAuthResendEmail = \u900f\u904e\u96fb\u5b50\u90f5\u4ef6\u91cd\u65b0\u767c\u9001\u7a0b\u5f0f\u78bc
+twoFactorAuthResendEmail = \u91cd\u65b0\u767c\u9001\u9a57\u8b49\u78bc
 twoFactorAuthResendEmailDone = \u4ee3\u78bc\u5df2\u91cd\u65b0\u767c\u9001\u3002
 twoFactorAuthChooseMethod_app = \u6211\u5c07\u4f7f\u7528\u624b\u6a5f\u4e0a\u7684\u8eab\u4efd\u9a57\u8b49\u61c9\u7528\u7a0b\u5f0f
 twoFactorAuthChooseMethod_email = \u5c07\u5b89\u5168\u4ee3\u78bc\u50b3\u9001\u81f3
