ZCS-15493: Added translations for license error text
ZCS-15493: removed sharingEnabled attribute check as it is removed from backend

--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -2724,3 +2724,4 @@ LBL_zimbraSieveRejectMailEnabled = Sigt "afvis" handling:
 NAD_AdminSieveGrouper = Si filter regler
 NAD_LegalInterceptGrouper = Juridisk aflytning
 ERROR_FEATURE_NOT_LICENSED = Du har i \u00f8jeblikket ikke licens til denne funktion.<br><br> Se venligst Konfigurer - Globale indstillinger - Licens for mere information.
+LBL_ERROR_FEATURE_NOT_LICENSED = Du har i \u00f8jeblikket ikke licens til denne funktion. Se venligst <u>Konfigurer - Globale indstillinger - Licens</u> for at f\u00e5 flere oplysninger.
