--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -2788,3 +2788,4 @@ LBL_zimbraSieveRejectMailEnabled = Aktion "Ablehnen" des Siebs:
 NAD_AdminSieveGrouper = Siebfilterregeln
 NAD_LegalInterceptGrouper = Rechtliches Abfangen
 ERROR_FEATURE_NOT_LICENSED = Sie verf\u00fcgen derzeit nicht \u00fcber eine Lizenz f\u00fcr diese Funktion.<br><br> Weitere Informationen finden Sie unter Konfigurieren – Globale Einstellungen – Lizenz.
+LBL_ERROR_FEATURE_NOT_LICENSED = Sie verf\u00fcgen derzeit nicht \u00fcber eine Lizenz f\u00fcr diese Funktion. Weitere Informationen finden Sie unter <u>Konfigurieren \u2013 Globale Einstellungen \u2013 Lizenz</u> .
