--- a/WebRoot/messages/ZaMsg_en_GB.properties
+++ b/WebRoot/messages/ZaMsg_en_GB.properties
@@ -2709,3 +2709,4 @@ ERROR_RPExists = Policy "{0}" already exists.
 multiple_servers = multiple servers
 ERROR_INVALID_FILE_NAME = Invalid file name. Use browse button to select a valid file.
 ERROR_FEATURE_NOT_LICENSED = You are not currently licensed for this feature.<br><br> Please see Configure - Global Settings - License for more information.
+LBL_ERROR_FEATURE_NOT_LICENSED = You are not currently licensed for this feature. Please see <u>Configure - Global Settings - License</u> for more information.
