--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -2839,3 +2839,4 @@ LBL_zimbraSieveRejectMailEnabled = Radnja "odbacivanja" sita:
 NAD_AdminSieveGrouper = Pravila filtera sita
 NAD_LegalInterceptGrouper = Pravno presretanje
 ERROR_FEATURE_NOT_LICENSED = Trenutno nemate licencu za ovu zna\u010dajku.<br><br> Za vi\u0161e informacija pogledajte Konfiguracija - Globalne postavke - Licenca.
+LBL_ERROR_FEATURE_NOT_LICENSED = Trenutno nemate licencu za ovu zna\u010dajku. Molimo pogledajte <u>Konfiguracija - Globalne postavke - Licenca</u> za vi\u0161e informacija.
