--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -2828,3 +2828,4 @@ LBL_zimbraSieveRejectMailEnabled = Saringan tindakan "tolak":
 NAD_AdminSieveGrouper = Aturan saringan saringan
 NAD_LegalInterceptGrouper = Intersepsi Hukum
 ERROR_FEATURE_NOT_LICENSED = Saat ini Anda tidak memiliki lisensi untuk fitur ini.<br><br> Silakan lihat Konfigurasi - Pengaturan Global - Lisensi untuk informasi lebih lanjut.
+LBL_ERROR_FEATURE_NOT_LICENSED = Saat ini Anda tidak memiliki lisensi untuk fitur ini. Silakan lihat <u>Konfigurasi - Pengaturan Global - Lisensi</u> untuk informasi lebih lanjut.
