--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -2814,3 +2814,4 @@ LBL_zimbraSieveRejectMailEnabled = Acci\u00f3 de "rebutjar" del tamís:
 NAD_AdminSieveGrouper = Regles de filtre de garbell
 NAD_LegalInterceptGrouper = Interceptaci\u00f3 legal
 ERROR_FEATURE_NOT_LICENSED = Actualment no teniu llic\u00e8ncia per a aquesta funci\u00f3.<br><br> Per obtenir m\u00e9s informaci\u00f3, consulteu Configuraci\u00f3 - Configuraci\u00f3 global - Llic\u00e8ncia.
+LBL_ERROR_FEATURE_NOT_LICENSED = Actualment no teniu llic\u00e8ncia per a aquesta funci\u00f3. Consulteu <u>Configuraci\u00f3 - Configuraci\u00f3 global - Llic\u00e8ncia</u> per obtenir m\u00e9s informaci\u00f3.
