--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -2815,3 +2815,4 @@ LBL_zimbraSieveRejectMailEnabled = Bahe "baztertu" ekintza:
 NAD_AdminSieveGrouper = Bahe-iragazkien arauak
 NAD_LegalInterceptGrouper = Legezko atzematea
 ERROR_FEATURE_NOT_LICENSED = Une honetan ez duzu funtzio honetarako lizentziarik.<br><br> Informazio gehiago lortzeko, ikusi Konfiguratu - Ezarpen orokorrak - Lizentzia.
+LBL_ERROR_FEATURE_NOT_LICENSED = Une honetan ez duzu funtzio honetarako lizentziarik. Mesedez, ikusi <u>Konfiguratu - Ezarpen orokorrak - Lizentzia</u> informazio gehiago lortzeko.
