--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -2789,6 +2789,7 @@ ERROR_RPExists = La r\u00e8gle \u00ab\u00a0{0}\u00a0\u00bb existe d\u00e9j\u00e0
 multiple_servers = serveurs multiples
 ERROR_INVALID_FILE_NAME = Nom de fichier incorrect. Pour s\u00e9lectionner un fichier correct, utilisez le bouton de navigation (Parcourir).
 ERROR_FEATURE_NOT_LICENSED = Vous n\u0027avez actuellement pas de licence pour cette fonctionnalit\u00e9.<br><br> Veuillez consulter Configurer - Param\u00e8tres globaux - Licence pour plus d\u0027informations.
+LBL_ERROR_FEATURE_NOT_LICENSED = Vous n\u0027avez actuellement pas de licence pour cette fonctionnalit\u00e9. Veuillez consulter <u>Configurer - Param\u00e8tres globaux - Licence</u> pour plus d\u0027informations.
 Alert_Sieve = Ces r\u00e8gles de filtrage Sieve ne peuvent \u00eatre consult\u00e9es et modifi\u00e9es que par les administrateurs.
 LBL_zimbraAdminSieveScriptAfter = R\u00e8gles Sieve appliqu\u00e9es apr\u00e8s les filtres d'utilisateurs finaux :
 LBL_zimbraAdminSieveScriptBefore = R\u00e8gles Sieve appliqu\u00e9es apr\u00e8s avant les filtres d'utilisateurs finaux :
