--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -2767,3 +2767,4 @@ LBL_zimbraSieveRejectMailEnabled = \uccb4 "\uac70\ubd80" \uc791\uc5c5:
 NAD_AdminSieveGrouper = \uccb4 \ud544\ud130 \uaddc\uce59
 NAD_LegalInterceptGrouper = \ubc95\uc801 \ucc28\ub2e8
 ERROR_FEATURE_NOT_LICENSED = \ud604\uc7ac \uc774 \uae30\ub2a5\uc5d0 \ub300\ud55c \ub77c\uc774\uc13c\uc2a4\uac00 \uc5c6\uc2b5\ub2c8\ub2e4\u002e\u003c\u0062\u0072\u003e\u003c\u0062\u0072\u003e \uc790\uc138\ud55c \ub0b4\uc6a9\uc740 \uad6c\uc131 \u002d \uc804\uc5ed \uc124\uc815 \u002d \ub77c\uc774\uc13c\uc2a4\ub97c \ucc38\uc870\ud558\uc2ed\uc2dc\uc624\u002e
+LBL_ERROR_FEATURE_NOT_LICENSED = \ud604\uc7ac \uc774 \uae30\ub2a5\uc5d0 \ub300\ud55c \ub77c\uc774\uc13c\uc2a4\uac00 \uc5c6\uc2b5\ub2c8\ub2e4. \uc790\uc138\ud55c \ub0b4\uc6a9\uc740 <u>\uad6c\uc131 - \uc804\uc5ed \uc124\uc815 - \ub77c\uc774\uc13c\uc2a4</u> \ub97c \ucc38\uc870\ud558\uc138\uc694.
