--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -2739,3 +2739,4 @@ LBL_zimbraSieveRejectMailEnabled = \u7be9\u9078\u201c\u5254\u9664\u201d\u52d5\u4
 NAD_AdminSieveGrouper = \u7be9\u7db2\u904e\u6ffe\u898f\u5247
 NAD_LegalInterceptGrouper = \u5408\u6cd5\u6514\u622a
 ERROR_FEATURE_NOT_LICENSED = \u60a8\u5f53\u524d\u6ca1\u6709\u83b7\u5f97\u6b64\u529f\u80fd\u7684\u8bb8\u53ef\u3002\u003c\u0062\u0072\u003e\u003c\u0062\u0072\u003e\u8bf7\u53c2\u9605\u914d\u7f6e \u002d \u5168\u5c40\u8bbe\u7f6e \u002d \u8bb8\u53ef\u8bc1\u4ee5\u4e86\u89e3\u66f4\u591a\u4fe1\u606f\u3002
+LBL_ERROR_FEATURE_NOT_LICENSED = \u60a8\u76ee\u524d\u672a\u7372\u5f97\u4f7f\u7528\u6b64\u529f\u80fd\u7684\u8a31\u53ef\u3002\u6709\u95dc\u8a73\u7d30\u4fe1\u606f\uff0c\u8acb\u53c3\u95b1 <u>\u914d\u7f6e - \u5168\u57df\u8a2d\u5b9a - \u8a31\u53ef\u8b49</u> \u3002
